@@ -2,4 +2,4 @@
 
  - Chương trình minh họa 3 thuật toán sắp xếp nổi bọt, chèn và lựa chọn sử dụng JavaFX 17.0.1. 
    - Yêu cầu có Maven.
-   - Thêm vmArgs: `"vmArgs": "--module-path \"C:\\Program Files\\javafx-sdk-17.0.1\\lib\" --add-modules javafx.controls,javafx.fxml"`
+   
